--- a/assets/base.css
+++ b/assets/base.css
@@ -1047,10 +1047,12 @@ summary::-webkit-details-marker {
 }
 
 .subtitle {
+  font-family: var(--font-heading-family);
+  text-transform: uppercase;
   font-size: 1.8rem;
-  line-height: calc(1 + 0.8 / var(--font-body-scale));
+  line-height: calc(1 + 0.8 / var(--font-heading-scale));
   letter-spacing: 0.06rem;
-  color: rgba(var(--color-foreground), 0.7);
+  color: rgba(var(--color-foreground), 1);
 }
 
 .subtitle--small {
@@ -1385,7 +1387,8 @@ button.shopify-payment-button__button--unbranded {
   border: 0;
   padding: 0 3rem;
   cursor: pointer;
-  font: inherit;
+  font-family: var(--font-heading-family);
+  text-transform: uppercase;
   font-size: 1.5rem;
   text-decoration: none;
   color: rgb(var(--color-button-text));
@@ -2701,9 +2704,10 @@ details[open]>.header__submenu {
 }
 
 .header__menu-item {
-  padding: 1.2rem;
+  font-family: var(--font-heading-family);
+  padding: 3.2rem;
   text-decoration: none;
-  color: rgba(var(--color-foreground), 0.75);
+  color: rgba(var(--color-foreground), 1);
 }
 
 .header__menu-item:hover {
