--- a/assets/base.css
+++ b/assets/base.css
@@ -2236,8 +2236,8 @@ input[type='checkbox'] {
   justify-content: center;
   align-items: center;
   font-size: 0.9rem;
-  bottom: 0.8rem;
-  left: 2.2rem;
+  bottom: 2.3rem;
+  left: 2.3rem;
   line-height: calc(1 + 0.1 / var(--font-body-scale));
 }
 
@@ -2334,7 +2334,7 @@ input[type='checkbox'] {
   .header--middle-left {
     grid-template-areas: 'heading navigation icons';
     grid-template-columns: 1fr auto auto;
-    column-gap: 2rem;
+    column-gap: 1.4rem;
   }
 
   .header--middle-center {
@@ -2446,6 +2446,8 @@ input[type='checkbox'] {
   display: flex;
   align-items: center;
   justify-content: center;
+  
+  
 }
 
 .header__icon {
@@ -2466,17 +2468,21 @@ input[type='checkbox'] {
 }
 
 .header__icon .icon {
-  height: 2rem;
-  width: 2rem;
+  height: 2.4rem;
+  width: 2.4rem;
   fill: none;
   vertical-align: middle;
 }
 
-.header__icon,
-.header__icon--cart .icon {
+.header__icon {
   height: 4.4rem;
   width: 4.4rem;
   padding: 0;
+}
+
+.header__icon--cart .icon {
+  height: 2.6rem;
+  width: 2.6rem;
 }
 
 .header__icon--cart {
@@ -2705,6 +2711,7 @@ details[open]>.header__submenu {
 
 .header__menu-item {
   font-family: var(--font-heading-family);
+  text-transform: uppercase;
   padding: 3.2rem;
   text-decoration: none;
   color: rgba(var(--color-foreground), 1);
