--- a/sections/kinda-hero.liquid
+++ b/sections/kinda-hero.liquid
@@ -1,9 +1,76 @@
-<div
-  class="hero-container">
-  <h1>
-    The Hero Section
-  </h1>
+{% style %}
+  .hero {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    /* max-width: 68rem; */
+    min-height: 60rem;
+    position: relative;
+  }
+
+  .hero__content {
+    align-items: center;
+    /* justify-content: center; */
+    display: flex;
+    height: fit-content;
+    text-align: center;
+    height: 100%;
+    width: 100%;
+    word-wrap: break-word;
+    z-index: 1;
+
+  }
+
+
+  .hero__media {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: flex-end;
+    /* left: 0; */
+    /* position: absolute; */
+    /* top: 0; */
+    width: 100%;
+  }
+
+  .hero__sticker {
+    background: red;
+    border-radius: 100%;
+    height: 50rem;
+    width: 50rem;
+    padding: 0;
+    position: absolute;
+    top: 10rem;
+    z-index: 2;
+  }
+
+  .hero__pattern {
+    /* object-fit: cover; */
+
+    /* width: 3000px; */
+  }
+  /* 
+  .pattern {
+    width: 3000px;
+  } */
+{% endstyle %}
+
+<div class="hero">
+  <div class="hero__media">
+    <div class="hero__pattern">
+      {% render 'pattern-16x4' %}
+    </div>
+  </div>
+  <div class="hero__sticker">
+    <div class="hero__content">
+      <h1 class="hero__tagline">
+        Fringilla erat amet risus erat cursus bibendum
+      </h1>
+    </div>
+  </div>
 </div>
+
 
 {% schema %}
   {
