--- a/snippets/pattern-2640x350.liquid
+++ b/snippets/pattern-2640x350.liquid
@@ -1,8 +1,7 @@
 <svg
-  class="pattern-liquid"
   fill="none"
-  id="pattern-16x4"
-  viewBox="0 0 1408 351"
+  id="pattern-2640x350"
+  viewBox="0 0 2640 351"
   xmlns="http://www.w3.org/2000/svg">
   <path class="pattern__shape--color-4" d="M0 88.4971H88V0.998047H0V88.4971Z" />
   <path class="pattern__shape--color-4" d="M88 88.5027H176V0.998047H88V88.5027Z" />
@@ -45,8 +44,8 @@
   <path class="pattern__shape--color-4" d="M1232 350.994H1320V263.495H1232V350.994Z" />
   <path class="pattern__shape--color-3" d="M1320 263.495C1320 311.822 1280.6 350.994 1232 350.994V263.495" />
   <path class="pattern__shape--color-2" d="M176 175.939V88.4971C127.398 88.4971 88 127.645 88 175.939C88 224.228 127.398 263.376 176 263.376" />
-  <path class="pattern__shape--color-2" d="M264 263.493V350.994C312.6 350.994 352 311.82 352 263.493C352 215.171 312.6 175.996 264 175.996" />
-  <path class="pattern__shape--color-4" d="M264 263.493V175.996C215.4 175.996 176 215.171 176 263.493C176 311.82 215.4 350.994 264 350.994" />
+  <path class="pattern__shape--color-2" d="M264 263.493V350.994C312.6 350.994 352 311.819 352 263.493C352 215.171 312.6 175.996 264 175.996" />
+  <path class="pattern__shape--color-4" d="M264 263.493V175.996C215.4 175.996 176 215.171 176 263.493C176 311.819 215.4 350.994 264 350.994" />
   <path class="pattern__shape--color-2" d="M87.9976 88.4971H176C176 40.1718 136.601 0.998047 87.9976 0.998047C39.3991 0.998047 0 40.1718 0 88.4971" />
   <path class="pattern__shape--color-4" d="M263.998 88.4971H352C352 40.1718 312.601 0.998047 263.998 0.998047C215.399 0.998047 176 40.1718 176 88.4971" />
   <path class="pattern__shape--color-4" d="M528 88.4971H616V0.998047H528V88.4971Z" />
@@ -104,4 +103,92 @@
   <path class="pattern__shape--color-3" d="M1056 350.994H1144V263.495H1056V350.994Z" />
   <path class="pattern__shape--color-2" d="M1056 0.998047C1104.55 0.998047 1143.91 40.0983 1143.91 88.336H1056" />
   <path class="pattern__shape--color-4" d="M1144 263.495C1144 311.817 1104.6 350.994 1056 350.994V263.495" />
+  <path class="pattern__shape--color-3" d="M1408 263.5H1496V351H1408V263.5Z" />
+  <path class="pattern__shape--color-2" d="M1496 263.5H1584V351H1496V263.5Z" />
+  <path class="pattern__shape--color-3" d="M1584 263.5H1672V351H1584V263.5Z" />
+  <path class="pattern__shape--color-3" d="M2552 263.5H2640V351H2552V263.5Z" />
+  <path class="pattern__shape--color-3" d="M1672 263.5H1760V351H1672V263.5Z" />
+  <path class="pattern__shape--color-2" d="M1408 176H1496V263.5H1408V176Z" />
+  <path class="pattern__shape--color-3" d="M1496 176H1584V263.5H1496V176Z" />
+  <path class="pattern__shape--color-3" d="M1584 176H1672V263.5H1584V176Z" />
+  <path class="pattern__shape--color-3" d="M2552 176H2640V263.5H2552V176Z" />
+  <path class="pattern__shape--color-3" d="M1672 176H1760V263.5H1672V176Z" />
+  <path class="pattern__shape--color-3" d="M1408 88.5H1496V176H1408V88.5Z" />
+  <path class="pattern__shape--color-3" d="M1496 88.5H1584V176H1496V88.5Z" />
+  <path class="pattern__shape--color-2" d="M1584 88.5H1672V176H1584V88.5Z" />
+  <path class="pattern__shape--color-2" d="M2552 88.5H2640V176H2552V88.5Z" />
+  <path class="pattern__shape--color-3" d="M1672 88.5H1760V176H1672V88.5Z" />
+  <path class="pattern__shape--color-2" d="M1408 0.999973H1496V88.5H1408V0.999973Z" />
+  <path class="pattern__shape--color-3" d="M1496 0.999973H1584V88.5H1496V0.999973Z" />
+  <path class="pattern__shape--color-4" d="M1584 0.999973H1672V88.5H1584V0.999973Z" />
+  <path class="pattern__shape--color-4" d="M2552 0.999973H2640V88.5H2552V0.999973Z" />
+  <path class="pattern__shape--color-3" d="M1672 0.999973H1760V88.5H1672V0.999973Z" />
+  <path class="pattern__shape--color-4" d="M1760 263.5C1760 215.175 1720.6 176 1672 176V263.5" />
+  <path class="pattern__shape--color-4" d="M1760 176C1760 127.675 1720.6 88.5 1672 88.5V176" />
+  <path class="pattern__shape--color-2" d="M1496 263.5C1544.6 263.5 1584 224.325 1584 176H1496" />
+  <path class="pattern__shape--color-4" d="M1408 176C1408 224.325 1447.4 263.5 1496 263.5V176" />
+  <path class="pattern__shape--color-4" d="M2464 263.5H2552V351H2464V263.5Z" />
+  <path class="pattern__shape--color-3" d="M2464 176H2552V263.5H2464V176Z" />
+  <path class="pattern__shape--color-3" d="M2464 176V263.5H2552" />
+  <path class="pattern__shape--color-4" d="M2464 88.5H2552V176H2464V88.5Z" />
+  <path class="pattern__shape--color-4" d="M2464 0.999973H2552V88.5H2464V0.999973Z" />
+  <path class="pattern__shape--color-3" d="M2552 88.5C2552 40.1725 2512.6 0.99998 2464 0.99998V88.5" />
+  <path class="pattern__shape--color-2" d="M1496 88.5024V0.999961C1544.6 0.999961 1584 40.1753 1584 88.5024C1584 136.825 1544.6 176 1496 176" />
+  <path class="pattern__shape--color-4" d="M1496 88.5024V176C1447.4 176 1408 136.825 1408 88.5024C1408 40.1753 1447.4 0.999961 1496 0.999961" />
+  <path class="pattern__shape--color-4" d="M1496 263.5H1584C1584 311.826 1544.6 351 1496 351C1447.4 351 1408 311.826 1408 263.5" />
+  <path class="pattern__shape--color-4" d="M1760 263.5H1848V351H1760V263.5Z" />
+  <path class="pattern__shape--color-4" d="M1848 263.5H1936V351H1848V263.5Z" />
+  <path class="pattern__shape--color-3" d="M1936 263.5H2024V351H1936V263.5Z" />
+  <path class="pattern__shape--color-4" d="M1760 176H1848V263.5H1760V176Z" />
+  <path class="pattern__shape--color-4" d="M1848 176H1936V263.5H1848V176Z" />
+  <path class="pattern__shape--color-4" d="M1936 176H2024V263.5H1936V176Z" />
+  <path class="pattern__shape--color-2" d="M1760 88.5H1848V176H1760V88.5Z" />
+  <path class="pattern__shape--color-3" d="M1848 88.5H1936V176H1848V88.5Z" />
+  <path class="pattern__shape--color-3" d="M1936 88.5H2024V176H1936V88.5Z" />
+  <path class="pattern__shape--color-3" d="M1760 0.999973H1848V88.5H1760V0.999973Z" />
+  <path class="pattern__shape--color-3" d="M1848 0.999973H1936V88.5H1848V0.999973Z" />
+  <path class="pattern__shape--color-2" d="M1936 0.999973H2024V88.5H1936V0.999973Z" />
+  <path class="pattern__shape--color-2" d="M1848 351C1896.6 351 1936 311.827 1936 263.5H1848" />
+  <path class="pattern__shape--color-4" d="M2024 176C2024 127.677 1984.6 88.5 1936 88.5V176" />
+  <path class="pattern__shape--color-2" d="M2024 263.5C2024 215.177 1984.6 176 1936 176V263.5" />
+  <path class="pattern__shape--color-4" d="M1936 88.5C1936 40.1774 1896.6 0.99998 1848 0.99998V88.5" />
+  <path class="pattern__shape--color-4" d="M2024 0.999978L1936 88.5H2024" />
+  <path class="pattern__shape--color-4" d="M1848 88.5L1760 176H1848" />
+  <path class="pattern__shape--color-background" d="M1584 263.5V176C1632.6 176 1672 215.174 1672 263.5C1672 311.826 1632.6 351 1584 351" />
+  <path class="pattern__shape--color-2" d="M2552 263.5V176C2600.6 176 2640 215.174 2640 263.5C2640 311.826 2600.6 351 2552 351" />
+  <path class="pattern__shape--color-3" d="M1848 263.5V351C1799.4 351 1760 311.826 1760 263.5C1760 215.174 1799.4 176 1848 176" />
+  <path class="pattern__shape--color-4" d="M1760 0.999973L1672 88.5H1760" />
+  <path class="pattern__shape--color-background" d="M1848 0.999974C1799.4 0.999974 1760 40.1746 1760 88.5H1848" />
+  <path class="pattern__shape--color-4" d="M2376 263.5H2464V351H2376V263.5Z" />
+  <path class="pattern__shape--color-4" d="M2376 176H2464V263.5H2376V176Z" />
+  <path class="pattern__shape--color-2" d="M2376 88.5H2464V176H2376V88.5Z" />
+  <path class="pattern__shape--color-3" d="M2376 0.999973H2464V88.5H2376V0.999973Z" />
+  <path class="pattern__shape--color-4" d="M2464 88.5L2376 176H2464" />
+  <path class="pattern__shape--color-3" d="M2464 263.5V351C2415.4 351 2376 311.826 2376 263.5C2376 215.174 2415.4 176 2464 176" />
+  <path class="pattern__shape--color-2" d="M2464 0.999974C2415.4 0.999974 2376 40.1746 2376 88.5H2464" />
+  <path class="pattern__shape--color-background" d="M2112 263.5H2200V351H2112V263.5Z" />
+  <path class="pattern__shape--color-3" d="M2112 176H2200V263.5H2112V176Z" />
+  <path class="pattern__shape--color-3" d="M2112 88.5H2200V176H2112V88.5Z" />
+  <path class="pattern__shape--color-3" d="M2112 0.999973H2200V88.5H2112V0.999973Z" />
+  <path class="pattern__shape--color-4" d="M2200 263.5C2200 215.175 2160.6 176 2112 176V263.5" />
+  <path class="pattern__shape--color-4" d="M2200 176C2200 127.675 2160.6 88.5 2112 88.5V176" />
+  <path class="pattern__shape--color-4" d="M2200 0.999973L2112 88.5H2200" />
+  <path class="pattern__shape--color-4" d="M2024 263.5H2112V351H2024V263.5Z" />
+  <path class="pattern__shape--color-4" d="M2024 176H2112V263.5H2024V176Z" />
+  <path class="pattern__shape--color-3" d="M2024 88.5H2112V176H2024V88.5Z" />
+  <path class="pattern__shape--color-3" d="M2024 0.999973H2112V88.5H2024V0.999973Z" />
+  <path class="pattern__shape--color-2" d="M2112 175.998V263.5C2063.4 263.5 2024 224.325 2024 175.998C2024 127.675 2063.4 88.5 2112 88.5" />
+  <path class="pattern__shape--color-4" d="M2200 263.5H2288V351H2200V263.5Z" />
+  <path class="pattern__shape--color-3" d="M2200 176H2288V263.5H2200V176Z" />
+  <path class="pattern__shape--color-3" d="M2200 176V263.5H2288" />
+  <path class="pattern__shape--color-4" d="M2200 88.5H2288V176H2200V88.5Z" />
+  <path class="pattern__shape--color-4" d="M2200 0.999973H2288V88.5H2200V0.999973Z" />
+  <path class="pattern__shape--color-3" d="M2288 88.5C2288 40.1725 2248.6 0.99998 2200 0.99998V88.5" />
+  <path class="pattern__shape--color-2" d="M2288 263.5H2376C2376 311.826 2336.6 351 2288 351C2239.4 351 2200 311.826 2200 263.5" />
+  <path class="pattern__shape--color-4" d="M2288 263.5H2376V351H2288V263.5Z" />
+  <path class="pattern__shape--color-4" d="M2288 176H2376V263.5H2288V176Z" />
+  <path class="pattern__shape--color-3" d="M2288 88.5H2376V176H2288V88.5Z" />
+  <path class="pattern__shape--color-3" d="M2288 0.999973H2376V88.5H2288V0.999973Z" />
+  <path class="pattern__shape--color-2" d="M2288 351C2336.55 351 2375.91 311.899 2375.91 263.661H2288" />
+  <path class="pattern__shape--color-4" d="M2376 88.5C2376 40.1774 2336.6 0.99998 2288 0.99998V88.5" />
 </svg>
