settings content hooked up to hero module and menu setting updated. Bubble color updated

--- a/assets/base.css
+++ b/assets/base.css
@@ -2227,7 +2227,7 @@ input[type='checkbox'] {
 
 .cart-count-bubble {
   position: absolute;
-  background-color: rgb(var(--color-button));
+  background-color: rgb(var(--color-base-accent-2));
   color: rgb(var(--color-button-text));
   height: 1.7rem;
   width: 1.7rem;
