--- a/sections/kinda-hero.liquid
+++ b/sections/kinda-hero.liquid
@@ -114,14 +114,14 @@
       </div>
       <div class="hero__content">
         <h1 class="hero__tagline">
-          Fringilla erat amet risus erat cursus bibendum
+          {{ section.settings.tagline }}
         </h1>
         <div class="">
           <a
             aria-label=""
             class="button "
-            href="">
-            shop now
+            href="{{section.settings.button_link}}">
+            {{ section.settings.button_text }}
           </a>
         </div>
       </div>
