--- a/assets/section-kinda-image-banner.css
+++ b/assets/section-kinda-image-banner.css
@@ -28,13 +28,30 @@
     }
   }
 
+  /* Added media queries for left long align */
+  @media only screen and (min-width: 1000px) {
+   
+   .kinda-banner--content-wide .kinda-banner__box {
+    max-width: 80rem;
+   }
+  }
+
+  @media only screen and (min-width: 800px) and (max-width:999px) {
+
+  }
+
+  @media only screen and (max-width:749) {
+
+  }
+
 /* Added media query for mid width stylings - large*/
   @media only screen and (min-width: 1000px) {
   
-    .kinda-banner--content-align-left.kinda-banner--desktop-transparent .kinda-banner__box,
+    .kinda-banner--content-align-left.kinda-banner--desktop-transparent:not(.kinda-banner--content-wide) .kinda-banner__box,
     .kinda-banner--content-align-right.kinda-banner--desktop-transparent .kinda-banner__box,
     .kinda-banner--medium.kinda-banner--desktop-transparent .kinda-banner__box {
-      max-width: 53rem;
+
+     max-width: 53rem;
     }
   }
 
@@ -270,7 +287,7 @@
   
   @media screen and (min-width: 750px) {
     .kinda-banner__content {
-padding-left: 20rem;
+padding-left: 5rem;
 padding-top: 5rem;
 padding-right: 5rem;
 padding-bottom: 5rem;
@@ -353,6 +370,12 @@ padding-bottom: 5rem;
       border: none;
       border-radius: 0;
       box-shadow: none;
+    }
+
+    .kinda-banner--desktop-transparent:not(.kinda-banner--content-wide) .kinda-banner__box {
+   
+      max-width: 55rem;
+ 
     }
   
     .kinda-banner--desktop-transparent .button--secondary {
