--- a/sections/kinda-image-banner.liquid
+++ b/sections/kinda-image-banner.liquid
@@ -30,12 +30,9 @@
   }
 {%- endstyle -%}
 
-<div
-  class="kinda-banner kinda-banner--content-align-{{ section.settings.desktop_content_alignment }} kinda-banner--content-align-mobile-{{ section.settings.mobile_content_alignment }} kinda-banner--{{ section.settings.image_height }}{% if section.settings.stack_images_on_mobile and section.settings.image != blank and section.settings.image_2 != blank %} kinda-banner--stacked{% endif %}{% if section.settings.image_height == 'adapt' and section.settings.image != blank %} kinda-banner--adapt{% endif %}{% if section.settings.show_text_below %} kinda-banner--mobile-bottom{%- endif -%}{% if section.settings.show_text_box == false %} kinda-banner--desktop-transparent{% endif %}"
-  id="Kinda-Banner-{{ section.id }}">
+<div class="kinda-banner  kinda-banner--content-align-{{ section.settings.desktop_content_alignment }} kinda-banner--content-align-mobile-{{ section.settings.mobile_content_alignment }} kinda-banner--{{ section.settings.image_height }}{% if section.settings.stack_images_on_mobile and section.settings.image != blank and section.settings.image_2 != blank %} kinda-banner--stacked{% endif %}{% if section.settings.image_height == 'adapt' and section.settings.image != blank %} kinda-banner--adapt{% endif %}{% if section.settings.show_text_below %} kinda-banner--mobile-bottom{%- endif -%}{% if section.settings.show_text_box == false %} kinda-banner--desktop-transparent{% endif %}" id="Kinda-Banner-{{ section.id }}">
   {%- if section.settings.image != blank -%}
-    <div
-      class="kinda-banner__media media{% if section.settings.image == blank and section.settings.image_2 == blank %} placeholder{% endif %}{% if section.settings.image_2 != blank %} kinda-banner__media-half{% endif %}">
+    <div class="kinda-banner__media media{% if section.settings.image == blank and section.settings.image_2 == blank %} placeholder{% endif %}{% if section.settings.image_2 != blank %} kinda-banner__media-half{% endif %}">
       {%- liquid
         assign image_height = section.settings.image.width | divided_by: section.settings.image.aspect_ratio
         if section.settings.image_2 != blank
@@ -62,14 +59,12 @@
  }}
     </div>
   {%- elsif section.settings.image_2 == blank -%}
-    <div
-      class="kinda-banner__media media{% if section.settings.image == blank and section.settings.image_2 == blank %} placeholder{% endif %}{% if section.settings.image_2 != blank %} kinda-banner__media-half{% endif %}">
+    <div class="kinda-banner__media media{% if section.settings.image == blank and section.settings.image_2 == blank %} placeholder{% endif %}{% if section.settings.image_2 != blank %} kinda-banner__media-half{% endif %}">
       {{ 'lifestyle-2' | placeholder_svg_tag: 'placeholder-svg' }}
     </div>
   {%- endif -%}
   {%- if section.settings.image_2 != blank -%}
-    <div
-      class="kinda-banner__media media{% if section.settings.image != blank %} kinda-banner__media-half{% endif %}">
+    <div class="kinda-banner__media media{% if section.settings.image != blank %} kinda-banner__media-half{% endif %}">
       {%- liquid
         assign image_height_2 = section.settings.image_2.width | divided_by: section.settings.image_2.aspect_ratio
         if section.settings.image != blank
@@ -96,32 +91,24 @@
  }}
     </div>
   {%- endif -%}
-  <div
-    class="kinda-banner__content kinda-banner__content--{{ section.settings.desktop_content_position }} page-width">
-    <div
-      class="kinda-banner__box content-container content-container--full-width-mobile color-{{ section.settings.color_scheme }} gradient">
+  <div class="kinda-banner__content kinda-banner__content--{{ section.settings.desktop_content_position }} kinda-banner__content--{{ section.settings.desktop_content_width }} page-width">
+    <div class="kinda-banner__box content-container content-container--full-width-mobile color-{{ section.settings.color_scheme }} gradient">
       {%- for block in section.blocks -%}
         {%- case block.type -%}
           {%- when 'heading' -%}
-          <h2
-            class="kinda-banner__heading {{ block.settings.heading_size }}"
-            {{ block.shopify_attributes }}>
+          <h2 class="kinda-banner__heading {{ block.settings.heading_size }}" {{ block.shopify_attributes }}>
             <span>
               {{ block.settings.heading | escape }}
             </span>
           </h2>
           {%- when 'text' -%}
-          <div
-            class="kinda-banner__text {{ block.settings.text_style }}"
-            {{ block.shopify_attributes }}>
+          <div class="kinda-banner__text {{ block.settings.text_style }}" {{ block.shopify_attributes }}>
             <span>
               {{ block.settings.text | escape }}
             </span>
           </div>
           {%- when 'buttons' -%}
-          <div
-            class="kinda-banner__buttons{% if block.settings.button_label_1 != blank and block.settings.button_label_2 != blank %} kinda-banner__buttons--multiple{% endif %}"
-            {{ block.shopify_attributes }}>
+          <div class="kinda-banner__buttons{% if block.settings.button_label_1 != blank and block.settings.button_label_2 != blank %} kinda-banner__buttons--multiple{% endif %}" {{ block.shopify_attributes }}>
             {%- if block.settings.button_label_1 != blank -%}
               <a
                 {% if block.settings.button_link_1 == blank %}
@@ -273,6 +260,26 @@
         ],
         "default": "center",
         "label": "t:sections.image-banner.settings.desktop_content_alignment.label"
+      },
+      {
+        "type": "select",
+        "id": "desktop_content_width",
+        "options": [
+          {
+            "value": "thin",
+            "label": "Thin"
+          },
+          {
+            "value": "medium",
+            "label": "Medium"
+          },
+          {
+            "value": "wide",
+            "label": "Wide"
+          }
+        ],
+        "default": "medium",
+        "label": "Desktop content width"
       },
       {
         "type": "select",
