--- a/snippets/icon-cart.liquid
+++ b/snippets/icon-cart.liquid
@@ -1,4 +1,40 @@
-<svg class="icon icon-cart"
-aria-hidden="true"
-focusable="false"
-fill="none" xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 512 512"><circle cx="176" cy="416" r="16" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="32"/><circle cx="400" cy="416" r="16" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="32"/><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="32" d="M48 80h64l48 272h256"/><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="32" d="M160 288h249.44a8 8 0 0 0 7.85-6.43l28.8-144a8 8 0 0 0-7.85-9.57H128"/></svg>
+<svg
+  aria-hidden="true"
+  class="icon icon-cart"
+  fill="none"
+  focusable="false"
+  viewBox="0 0 512 512"
+  xmlns="http://www.w3.org/2000/svg">
+  <circle
+    cx="176"
+    cy="416"
+    fill="none"
+    r="16"
+    stroke-linecap="round"
+    stroke-linejoin="round"
+    stroke-width="32"
+    stroke="currentColor" />
+  <circle
+    cx="400"
+    cy="416"
+    fill="none"
+    r="16"
+    stroke-linecap="round"
+    stroke-linejoin="round"
+    stroke-width="32"
+    stroke="currentColor" />
+  <path
+    d="M48 80h64l48 272h256"
+    fill="none"
+    stroke-linecap="round"
+    stroke-linejoin="round"
+    stroke-width="32"
+    stroke="currentColor" />
+  <path
+    d="M160 288h249.44a8 8 0 0 0 7.85-6.43l28.8-144a8 8 0 0 0-7.85-9.57H128"
+    fill="none"
+    stroke-linecap="round"
+    stroke-linejoin="round"
+    stroke-width="32"
+    stroke="currentColor" />
+</svg>
