nutritional block created with rda calculation. Kinda product multicolumn created

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -69,6 +69,8 @@
           --font-heading-style: {{ settings.type_header_font.style }};
           --font-heading-weight: {{ settings.type_header_font.weight }};
 
+          --font-bold: var(--font-heading-family);
+
           --font-body-scale: {{ settings.body_scale | divided_by: 100.0 }};
           --font-heading-scale: {{ settings.heading_scale | times: 1.0 | divided_by: settings.body_scale }};
 
