nutritional block linked to kinda-prod....

--- a/sections/multicolumn.liquid
+++ b/sections/multicolumn.liquid
@@ -436,6 +436,23 @@
             "label": "t:sections.multicolumn.blocks.column.settings.link.label"
           }
         ]
+      },
+      {
+        "type": "nutritional-column",
+        "name": "Nutritional Column",
+        "settings": [
+          {
+            "type": "text",
+            "id": "title",
+            "default": "Column",
+            "label": "t:sections.multicolumn.blocks.column.settings.title.label"
+          },
+          {
+            "type": "text",
+            "id": "energy_kj",
+            "label": "Energy (Kj)"
+          }
+        ]
       }
     ],
     "presets": [
