--- a/sections/kinda-product-multicolumn.liquid
+++ b/sections/kinda-product-multicolumn.liquid
@@ -62,96 +62,48 @@
         class="multicolumn-list contains-content-container grid grid--{{ section.settings.columns_mobile }}-col-tablet-down grid--{{ section.settings.columns_desktop }}-col-desktop{% if show_mobile_slider %} slider slider--mobile grid--peek{% endif %}"
         id="Slider-{{ section.id }}"
         role="list">
-        {%- liquid
-          assign highest_ratio = 0
-          for block in section.blocks
-            if block.settings.image.aspect_ratio > highest_ratio
-              assign highest_ratio = block.settings.image.aspect_ratio
-            endif
-          endfor
-        -%}
-        {%- for block in section.blocks -%}
-          {%- assign empty_column = '' -%}
-          {%- if block.settings.image == blank
- and block.settings.title == blank
- and block.settings.text == blank
- and block.settings.link_label == blank
- -%}
-            {%- assign empty_column = ' multicolumn-list__item--empty' -%}
-          {%- endif -%}
 
-          <li
-            class="multicolumn-list__item grid__item{% if section.settings.swipe_on_mobile %} slider__slide{% endif %}{% if section.settings.column_alignment == 'center' %} center{% endif %}{{ empty_column }}"
-            id="Slide-{{ section.id }}-{{ forloop.index }}"
-            {{ block.shopify_attributes }}>
-            <div class="multicolumn-card content-container">
-              {%- if block.settings.image != blank -%}
-                {% if section.settings.image_ratio == 'adapt' or section.settings.image_ratio == 'circle' %}
-                  {% assign spaced_image = true %}
-                {% endif %}
-                <div class="multicolumn-card__image-wrapper multicolumn-card__image-wrapper--{{ section.settings.image_width }}-width{% if section.settings.image_width != 'full' or spaced_image %} multicolumn-card-spacing{% endif %}">
-                  <div
-                    class="media media--transparent media--{{ section.settings.image_ratio }}"
-                    {% if section.settings.image_ratio == 'adapt' %}
-                    style="padding-bottom: {{ 1 | divided_by: highest_ratio | times: 100 }}%;"
-                    {% endif %}>
-                    {%- capture sizes -%}
-                      (min-width: 990px)
-                      {% if section.blocks.size <= 2 %}
-                        710px
+        {%- for block in section.blocks -%}
+          {%- case block.type -%}
+            {%- when '@app' -%}
+            {% render block %}
+            {%- when 'column' -%}
+            <li
+              class="multicolumn-list__item grid__item{% if section.settings.swipe_on_mobile %} slider__slide{% endif %}{% if section.settings.column_alignment == 'center' %} center{% endif %}{{ empty_column }}"
+              id="Slide-{{ section.id }}-{{ forloop.index }}"
+              {{ block.shopify_attributes }}>
+              <div class="multicolumn-card content-container">
+
+                <div class="multicolumn-card__info">
+                  {%- if block.settings.title != blank -%}
+                    <h3>
+                      {{ block.settings.title | escape }}
+                    </h3>
+                  {%- endif -%}
+                  {%- if block.settings.text != blank -%}
+                    <div class="rte">
+                      {{ block.settings.text }}
+                    </div>
+                  {%- endif -%}
+                  {%- if block.settings.link_label != blank -%}
+                    <a
+                      class="link animate-arrow"
+                      {% if block.settings.link == blank %}
+                      role="link"
+                      aria-disabled="true"
                       {% else %}
-                        550px
-                      {% endif %}
-                      , (min-width:
-                      750px)
-                      {% if section.blocks.size == 1 %}
-                        710px
-                      {% else %}
-                        550px
-                      {% endif %}
-                      , calc(100vw - 30px)
-                    {%- endcapture -%}
-                    {{ 
- block.settings.image
- | image_url: width: 1420
- | image_tag:
- loading: 'lazy',
- sizes: sizes,
- widths: '275, 550, 710, 1420',
- class: 'multicolumn-card__image'
- }}
-                  </div>
+                      href="{{ block.settings.link }}"
+                      {% endif %}>
+                      {{- block.settings.link_label | escape -}}
+                      <span class="icon-wrap">
+                        &nbsp;{% render 'icon-arrow' %}
+                      </span>
+                    </a>
+                  {%- endif -%}
                 </div>
-              {%- endif -%}
-              <div class="multicolumn-card__info">
-                {%- if block.settings.title != blank -%}
-                  <h3>
-                    {{ block.settings.title | escape }}
-                  </h3>
-                {%- endif -%}
-                {%- if block.settings.text != blank -%}
-                  <div class="rte">
-                    {{ block.settings.text }}
-                  </div>
-                {%- endif -%}
-                {%- if block.settings.link_label != blank -%}
-                  <a
-                    class="link animate-arrow"
-                    {% if block.settings.link == blank %}
-                    role="link"
-                    aria-disabled="true"
-                    {% else %}
-                    href="{{ block.settings.link }}"
-                    {% endif %}>
-                    {{- block.settings.link_label | escape -}}
-                    <span class="icon-wrap">
-                      &nbsp;{% render 'icon-arrow' %}
-                    </span>
-                  </a>
-                {%- endif -%}
               </div>
-            </div>
-          </li>
+            </li>
+          {%- endcase -%}
         {%- endfor -%}
         <li>
           {%- render 'nutritional-info', energy_kj: 1239, energy_kcal: 296, fat: 32, fat_saturates: 24, carbs: 4, carbs_sugar: 1, protein: 2, salt: 2 -%}
@@ -213,6 +165,55 @@
     "name": "Product Multicolumn",
     "class": "section",
     "tag": "section",
+    "blocks": [
+      {
+        "type": "@app"
+      },
+      {
+        "type": "column",
+        "name": "t:sections.multicolumn.blocks.column.name",
+        "settings": [
+          {
+            "type": "image_picker",
+            "id": "image",
+            "label": "t:sections.multicolumn.blocks.column.settings.image.label"
+          },
+          {
+            "type": "text",
+            "id": "title",
+            "default": "Column",
+            "label": "t:sections.multicolumn.blocks.column.settings.title.label"
+          },
+          {
+            "type": "richtext",
+            "id": "text",
+            "default": "<p>Pair text with an image to focus on your chosen product, collection, or blog post. Add details on availability, style, or even provide a review.</p>",
+            "label": "t:sections.multicolumn.blocks.column.settings.text.label"
+          },
+          {
+            "type": "text",
+            "id": "link_label",
+            "label": "t:sections.multicolumn.blocks.column.settings.link_label.label"
+          },
+          {
+            "type": "url",
+            "id": "link",
+            "label": "t:sections.multicolumn.blocks.column.settings.link.label"
+          }
+        ]
+      },
+      {
+        "type": "nutritional-column",
+        "name": "Nutritional Column",
+        "settings": [
+          {
+            "type": "number",
+            "id": "energy_kj",
+            "label": "Energy (Kj)"
+          }
+        ]
+      }
+    ],
     "settings": [
       {
         "type": "text",
@@ -413,57 +414,6 @@
         "unit": "px",
         "label": "t:sections.all.padding.padding_bottom",
         "default": 36
-      }
-    ],
-    "blocks": [
-      {
-        "type": "column",
-        "name": "t:sections.multicolumn.blocks.column.name",
-        "settings": [
-          {
-            "type": "image_picker",
-            "id": "image",
-            "label": "t:sections.multicolumn.blocks.column.settings.image.label"
-          },
-          {
-            "type": "text",
-            "id": "title",
-            "default": "Column",
-            "label": "t:sections.multicolumn.blocks.column.settings.title.label"
-          },
-          {
-            "type": "richtext",
-            "id": "text",
-            "default": "<p>Pair text with an image to focus on your chosen product, collection, or blog post. Add details on availability, style, or even provide a review.</p>",
-            "label": "t:sections.multicolumn.blocks.column.settings.text.label"
-          },
-          {
-            "type": "text",
-            "id": "link_label",
-            "label": "t:sections.multicolumn.blocks.column.settings.link_label.label"
-          },
-          {
-            "type": "url",
-            "id": "link",
-            "label": "t:sections.multicolumn.blocks.column.settings.link.label"
-          }
-        ]
-      }
-    ],
-    "presets": [
-      {
-        "name": "Product Multicolumn",
-        "blocks": [
-          {
-            "type": "column"
-          },
-          {
-            "type": "column"
-          },
-          {
-            "type": "column"
-          }
-        ]
       }
     ]
   }
